@@ -22,4 +22,6 @@ Zollern Galaxy v2.0.4
     * Too many space explorers were dying due to inability to survive the force of gravity and we received complaints from the Human Resources department.
 * Modified ChunkProviders for Eden and Xathius to generate more beautifully.
 * Set Rocket Tier requirement for Xathius to 10 since it's such a heavily-ored Planet.
+* Added planet Oasis.
+    * Mostly another paradise planet with some secrets. Maybe it's not all good...
 * 
